--- a/core4.html
+++ b/core4.html
@@ -53,7 +53,7 @@
         <!-- Fill in the row for Loops -->
         <tr>
           <td><b>Loops</b></td>
-          <td>  </td>
+          <td> repetition </td>
           <td>  </td>
           <td>  </td>
           <td>  </td>
@@ -62,7 +62,7 @@
         <!-- Fill in the row for Conditionals -->
         <tr>
           <td><b>Conditionals</b></td>
-          <td>  </td>
+          <td> if true then this, if false then that </td>
           <td>  </td>
           <td>  </td>
           <td>  </td>
@@ -71,7 +71,7 @@
         <!-- Fill in the row for Functions -->
         <tr>
           <td><b>Functions</b></td>
-          <td>  </td>
+          <td> preforms an operation </td>
           <td>  </td>
           <td>  </td>
           <td>  </td>
