--- a/core4.html
+++ b/core4.html
@@ -45,7 +45,7 @@
         <tr>
         <td><b>Variables</b></td>
           <td> a storage location paired with an identifier which contains some known or unknown quantity of information referred to as a value </td>
-          <td>  </td>
+          <td> a basket filled with goodies </td>
           <td> t-shirts = 5 </td>
           <td>  </td>
         </tr>
@@ -54,7 +54,7 @@
         <tr>
           <td><b>Loops</b></td>
           <td> repetition </td>
-          <td>  </td>
+          <td> a track field </td>
           <td>  </td>
           <td>  </td>
         </tr>
